bat.bool1.icyhot.IcyHot.scala.error
Erreur de compilation :
IcyHot:1: error: not found: value temps2
def icyHot(temp1:Int, temp2: Int): Boolean = {(temp1<0)&&(temps2>100)||(temp1>100)&&(temp2<0)
                                                          ^